--- a/test2.html
+++ b/test2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="test.css">
+    <link rel="stylesheet" type="text/css" href="test1.css">
 </head> 
 </head>
 <body>
@@ -18,10 +18,6 @@
         <div class="flex1"></div>
         <div class="flex2"></div>
         <div class="flex3"></div>
-
-
-
-
-    </div>
+</div>
 </body>
 </html>
